# Algorithms-for-Threat-Detection-2025-Challenge

./: .gitignore  LICENSE  README.md  collate_20class_dataset.py  create_20class_dataset.py  deep_class20_folder.py  deep_model_eval.ipynb  dist_matrix_clustering.ipynb  kalman_const_turn.ipynb  kalman_const_velocity.ipynb  kalman_half_maneuver.ipynb  ml_out_ds1.csv  oracle.ipynb  oracle_analysis.ipynb  requirements.txt  xmean.pt  xstd.pt
atd2025-challenge/: .gitignore  .gitlab-ci.yml  README.md  environment.yml  mkdocs.yml  pyproject.toml
atd2025-challenge/docs/: data.md  faq.md  index.md  metric.md  problem.md  submission.md
atd2025-challenge/docs/api/: baselines.md  constants.md  data.md  io.md  metrics.md  plotting.md  tracks.md
atd2025-challenge/docs/cookbook/: evaluation.md  generating-data.md  predictions.md
atd2025-challenge/docs/getting-started/: dependencies.md  environment.md  gitlab.md
atd2025-challenge/scripts/: data_processing.py  example_prediction.py  load_predictions_and_evaluate.py
atd2025-challenge/src/atd2025/: __init__.py  accuracy.py  baseline.py  constants.py  data.py  datasets.py  io.py  naive.py  tracks.py
atd2025-challenge/src/atd2025/aisvis/: __init__.py  base.py  plot_tools.py  show_tracks.py
atd2025-challenge/tests/: test_accuracy.py  test_baseline.py  test_data.py  test_io.py  test_show_tracks.py
cbtr_closest/: README.md  cbtr_dist_matrix_maker.ipynb  requirements.txt
clustering_output/: grademe_avg.csv  grademe_cbtr.csv  grademe_complete.csv  grademe_dbscan.csv  grademe_single.csv
docs/: METHODOLOGY.md
oracle_out/: k_12.csv  k_128.csv  k_16.csv  k_2.csv  k_24.csv  k_3.csv  k_32.csv  k_4.csv  k_48.csv  k_5000.csv  k_6.csv  k_64.csv  k_8.csv  k_96.csv
ucf_atd_model/: README.md  baseline.py  c20_consts.py  data.py
ucf_atd_model/datasets/: create_20class_data.py  create_link_data.py  pt_datasets.py  utils.py
